covered test to check for valid update by name